2006-09-11  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/13685
	PR target/27537
	PR target/28621
	* config/i386/i386.c (override_options): Always default to 16
	byte stack boundary.

2006-09-11  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR rtl-optimization/28726
	* sched-deps.c (sched_analyze_reg): New function extracted from...
	(sched_analyze_1): ...here.  Call it to analyze references to
	registers.  Treat again writes to a stack register as writing to the
	register.
	(sched_analyze_2): ...and here.  Call it to analyze references to
	registers.  Treat again reads of a stack register as reading the
	register.

2006-09-11  Hideki Iwamoto  <h-iwamoto@kit.hi-ho.ne.jp>

	* doc/cpp.texi: Fix names of charset options.

2006-09-10  Roger Sayle  <roger@eyesopen.com>
	    Nicolas Setton <setton@adacore.com>

	Backport from mainline
	* dwarf2out.c (convert_cfa_to_fb_loc_list): Handle DW_CFA_set_loc.

2006-09-10  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR rtl-optimization/28636
	* combine.c (force_to_mode): Test for side-effects before
	substituting by zero.
	(simplify_shift_const): Likewise for zero or other constants.

2006-09-10  Richard Sandiford  <richard@codesourcery.com>

	PR target/29006
	* config/mips/mips-protos.h (mips_mem_fits_mode_p): Declare.
	* config/mips/mips.c (mips_expand_unaligned_store): Use the mode
	returned by mode_for_size, rather than the mode of src itself,
	to choose between 32-bit and 64-bit patterns.
	(mips_mem_fits_mode_p): New function.
	* config/mips/mips.md (mov_<load>l, mov_<load>r): Use it to check
	that the size of the source matches the size of the destination.
	(mov_<store>l, mov_<store>r): Likewise.

2006-09-10  Richard Sandiford  <richard@codesourcery.com>

	PR target/27681

	Backport from mainline:

	2006-05-23  Richard Sandiford  <richard@codesourcery.com>

	* libgcc2.c (LIBGCC2_MAX_UNITS_PER_WORD): New macro.
	(LIBGCC2_UNITS_PER_WORD): Use LIBGCC2_MAX_UNITS_PER_WORD rather than