@@ -1,3 +1,7 @@
+2006-09-12  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* gcc.dg/pr28243.c: New test.
+
 2006-09-11  Andrew Pinski  <pinskia@physics.uc.edu>
 
 	PR testsuite/29007
